legacy/additional_testing/gcc_crash_stats/results/gcc540/save_st/pr64766.c-5.4.0-0.out.txt
pr64766.c:9:1: error: function ‘foo’ is initialized like a variable
 void foo () = 0;  
 ^
pr64766.c:9:15: error: invalid initializer
 void foo () = 0;  
               ^
